--- a/ValueTechNZ_Final/appsettings.json
+++ b/ValueTechNZ_Final/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-LAR4J4U\\SQLEXPRESS;Database=ValueTechNZ_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-U1O82NG\\SQLEXPRESS;Database=ValueTechNZ_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
