Paypal payment working!

--- a/ValueTechNZ_Final/appsettings.json
+++ b/ValueTechNZ_Final/appsettings.json
@@ -11,5 +11,10 @@
   "CartSettings": {
     "ShippingFee": 6.5
   },
+  "PayPalSettings": {
+    "ClientId": "AV1McK4rS0lpVF-XDGjPlIyPpvhxFT0nl6ht2uC2P-M2vTP6qXREzVBp-QEhEj7sBmGDSATQpU4F9yvV",
+    "Secret": "EO3dhKyRERjxLNkQQOV8M_6ATt_OytDuKl4cRuf53vIHYMaWFSCUCnpfKd3ZACpq20sxXA-AZnhXGLit",
+    "Url": "https://api-m.sandbox.paypal.com"
+  },
   "AllowedHosts": "*"
 }
